Add internal artifact download access
